--- a/index.html
+++ b/index.html
@@ -46,23 +46,23 @@
     <!-- video card part -->
     <div class="video-card-container">
         <div class="video-card">
-            <img src="images/mappa.PNG" class="video-card-image" alt="">
+            <img src="images/mappa.png" class="video-card-image" alt="">
             <video src="videos/mappa.mp4" muted loop class="card-video"></video>
         </div>
         <div class="video-card">
-            <img src="images/ufotable.PNG" class="video-card-image" alt="">
+            <img src="images/ufotable.png" class="video-card-image" alt="">
             <video src="videos/ufotable.mp4" muted loop class="card-video"></video>
         </div>
         <div class="video-card">
-            <img src="images/kyoto.PNG" class="video-card-image" alt="">
+            <img src="images/kyoto.png" class="video-card-image" alt="">
             <video src="videos/kyoto.mp4" muted loop class="card-video"></video>
         </div>
         <div class="video-card">
-            <img src="images/wit.PNG" class="video-card-image" alt="">
+            <img src="images/wit.png" class="video-card-image" alt="">
             <video src="videos/wit.mp4" muted loop class="card-video"></video>
         </div>
         <div class="video-card">
-            <img src="images/ghibli.PNG" class="video-card-image" alt="">
+            <img src="images/ghibli.png" class="video-card-image" alt="">
             <video src="videos/ghibli.mp4" muted loop class="card-video"></video>
         </div>
     </div>
