--- a/index.html
+++ b/index.html
@@ -24,10 +24,26 @@
 
         <section class="hero">
                 <div class="hero_div1">
-                    hero 1
+                    <div class="cmn_div1">
+                        <p class="heading_mini">Welcome to ABIM Studio</p> <br>
+                    </div>
+                    <div class="cmn_div1">
+                        <p class="heading_white">Your best BIM</p>
+                        <p class="heading_red">Partner</p>
+                    </div>
+                    <div class="cmn_div1">
+                        <p class="text_content">
+                            Our Architecture and BIM services are tailored to deliver intelligent 
+                            and efficient building models with a collaborative approach, enhancing 
+                            coordination and optimizing execution for superior project outcomes.
+                        </p>
+                    </div>
+                    <div class="cmn_div1">
+                        <input type="button" value="Get Started >" class="cmn_btn">
+                    </div>
                 </div>
                 <div class="hero_div2">
-                    hero 2
+                    <img src="/static/images/heroRight.png" alt="hero2" class="bg_img">
                 </div>
         </section>
 
