--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <nav id="nav">
                 <div class="nav_div1">
-                    <img src="" alt="logo">
+                    <img src="./static/images/logo.png" alt="logo">
                 </div>
                 <div class="nav_div2">
                     <a href="" class="nav_ele">Home</a>
@@ -19,6 +19,16 @@
                     <a href="" class="nav_ele">Services</a>
                     <a href="" class="nav_ele">Contact</a>
                     <button>Request a demo</button>
+                </div>
+                <div class="nav_div3">
+                    <div class="nav_btn">|||</div>
+                    <div class="nav_menu">
+                        <a href="" class="nav_ele">Home</a>
+                  x      <a href="" class="nav_ele">About</a>
+                        <a href="" class="nav_ele">Services</a>
+                        <a href="" class="nav_ele">Contact</a>
+                        <button>Request a demo</button>
+                    </div>
                 </div>
         </nav>
 
