Update index.html sat-3

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <nav id="nav">
                 <div class="nav_div1">
-                    <img src="./static/images/logo.png" alt="logo">
+                    <img src="./static/images/logo.png" alt="logo" class="bg_img">
                 </div>
                 <div class="nav_div2">
                     <a href="" class="nav_ele">Home</a>
@@ -21,10 +21,17 @@
                     <button>Request a demo</button>
                 </div>
                 <div class="nav_div3">
-                    <div class="nav_btn">|||</div>
+                    <div class="nav_logo">
+                        <img src="./static/images/logo_mini.png" alt="" class="bg_img">
+                    </div>
+                    <div class="nav_btn">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                     <div class="nav_menu">
                         <a href="" class="nav_ele">Home</a>
-                  x      <a href="" class="nav_ele">About</a>
+                        <a href="" class="nav_ele">About</a>
                         <a href="" class="nav_ele">Services</a>
                         <a href="" class="nav_ele">Contact</a>
                         <button>Request a demo</button>
@@ -34,10 +41,11 @@
 
         <section class="hero">
                 <div class="hero_div1">
+                    <!-- <div class="cmn_div1">
+                        <p class="heading_mini">Welcome to ABIM Studio</p> <br>
+                    </div> -->
                     <div class="cmn_div1">
                         <p class="heading_mini">Welcome to ABIM Studio</p> <br>
-                    </div>
-                    <div class="cmn_div1">
                         <p class="heading_white">Your best BIM</p>
                         <p class="heading_red">Partner</p>
                     </div>
