Update index.html sat-4

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                         <div></div>
                     </div>
                     <div class="nav_menu">
-                        <a href="" class="nav_ele">Home</a>
-                        <a href="" class="nav_ele">About</a>
-                        <a href="" class="nav_ele">Services</a>
-                        <a href="" class="nav_ele">Contact</a>
-                        <button>Request a demo</button>
+                        <div><a href="" class="nav_ele">Home</a></div>
+                        <div><a href="" class="nav_ele">About</a></div>
+                        <div><a href="" class="nav_ele">Services</a></div>
+                        <div><a href="" class="nav_ele">Contact</a></div>
+                        <div><button>Request a demo</button></div>
                     </div>
                 </div>
         </nav>
