Update index.html linked aboutus

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="nav_div2">
                     <a href="" class="nav_ele">Home</a>
-                    <a href="" class="nav_ele">About</a>
+                    <a href="./aboutUs.html" class="nav_ele">About</a>
                     <a href="" class="nav_ele">Services</a>
                     <a href="" class="nav_ele">Contact</a>
                     <button>Request a demo</button>
