--- a/index.html
+++ b/index.html
@@ -194,7 +194,50 @@
 
         <section class="review">
                 <div class="review_div1">
-                    review
+                    <div class="review_div1_inner">
+                        <div class="cmn_div1">
+                            <img src="./static/images/review1_1.png" alt="" class="bg_img">
+                        </div>
+                        <div class="cmn_div1">
+                            <img src="./static/images/review1_2.png" alt="" class="bg_img">
+                        </div>
+                        <div class="cmn_div1">
+                            <img src="./static/images/review1_3.png" alt="" class="bg_img">
+                        </div>
+                    </div>
+                    <div class="review_div1_inner">
+                        <div class="cmn_div1">
+                            <p class="heading_white_med">About Us</p>
+                        </div>
+                        <div class="cmn_div1">
+                            <p class="heading_white_med">Virtually Build Future Projects Today</p>
+                        </div>
+                        <div class="cmn_div1">
+                            <p class="text_content_white">Our Architecture and BIM services are tailored to deliver intelligent and efficient building models 
+                            with a collaborative approach, enhancing coordination and optimizing execution for superior project 
+                            outcomes.</p>
+                        </div>
+                    </div>
+                    <div class="review_div1_inner">
+                        <img src="./static/images/review3.png" alt="" class="bg_img">
+                    </div>
+                </div>
+                <div class="review_div2">
+                    <p class="heading_red">What Our Clients Say About Us</p>
+                </div>
+                <div class="review_div3">
+                    <button class="cmn_btn">
+                        <img src="./static/images/review_left_btn.png" alt="" class="bg_img">
+                    </button>
+                    <div class="cmn_div1">
+                        <div><p class="heading_white_med">"Ekaa Designs"</p></div>
+                        <p class="text_content_white"> ABIM STUDIO exceeded my expectations! Their expertise in architecture BIM 
+                            is unmatched. The team was professional, attentive, and delivered outstanding results. Thank You, 
+                            ABIM STUDIO! </p>
+                    </div>
+                    <button class="cmn_btn">
+                        <img src="./static/images/review_right_btn.png" alt="" class="bg_img">
+                    </button>
                 </div>
         </section>
 
