--- a/aboutUs.html
+++ b/aboutUs.html
@@ -12,188 +12,191 @@
 
 <body>
 
-</body>
-
-<header class="navbar">
-    <div class="logo">
-        <img src="./static/images/logo.png" alt="abimstudio logo">
-        <!-- <span>abim<span style="color: red;">studio</span> -->
-    </div>
-    <nav class="nav-links">
-        <a href="#">Home</a>
-        <a href="#" class="active">About Us</a>
-        <a href="#">Services</a>
-        <a href="#">Contact</a>
-    </nav>
-    <div class="icons">
-        <a href="#" aria-label="Search">
-            <i class="fas fa-search"></i>
-        </a>
-        <a href="#" aria-label="Notifications">
-            <i class="fas fa-bell"></i>
-        </a>
-    </div>
-</header>
-
-
-
-<!-- Fullscreen Image Section -->
-<section class="fullscreen-image">
-    <!-- Optional text overlay -->
-    <div class="overlay-text">Welcome to Our Website</div>
-</section>
-
-
-
-<!-- Our Team Section -->
-<section class="about-us">
-    <h1>About Us</h1>
-    <p>
-        ABIM STUDIO is a dynamic and innovative architectural and design firm, specializing in Building Information
-        Modeling (BIM), architectural planning, interior design, and landscape services. ABIM STUDIO is committed to
-        delivering exceptional design solutions that combine creativity, functionality, and sustainability.
-    </p>
-    <div class="cards-container">
-        <div class="card">
-            <div class="icon">
-                <img src="mission-icon.png" alt="Mission Icon">
-            </div>
-            <h2>Our Mission</h2>
-            <p>
-                Build the best product that creates the most value for our customers, use business to inspire and
-                implement
-                environmentally friendly solutions.
-            </p>
+    <header class="navbar">
+        <div class="logo">
+            <img src="./static/images/logo.png" alt="abimstudio logo">
+            <!-- <span>abim<span style="color: red;">studio</span> -->
         </div>
-        <div class="card">
-            <div class="icon">
-                <img src="values-icon.png" alt="Values Icon">
-            </div>
-            <h2>Our Values</h2>
-            <p>
-                We strive to go above and beyond for our clients no matter the challenge. We aim to deliver our very
-                best
-                work every single day across our services.
-            </p>
+        <nav class="nav-links">
+            <a href="./index.html">Home</a>
+            <a href="#" class="active">About Us</a>
+            <a href="./services.html">Services</a>
+            <a href="#">Contact</a>
+        </nav>
+        <div class="icons">
+            <a href="#" aria-label="Search">
+                <i class="fas fa-search"></i>
+            </a>
+            <a href="#" aria-label="Notifications">
+                <i class="fas fa-bell"></i>
+            </a>
         </div>
-    </div>
-</section>
+    </header>
 
 
-<section class="faq-section">
-    <div class="faq-header">
-        <h2>Frequently Asked Questions</h2>
+
+    <!-- Fullscreen Image Section -->
+    <section class="fullscreen-image">
+        <!-- Optional text overlay -->
+        <div class="overlay-text">Welcome to Our About</div>
+    </section>
+
+
+
+    <!-- Our Team Section -->
+    <section class="about-us">
+        <h1>About Us</h1>
         <p>
-            Got questions? We’ve got answers! Check out our FAQ section to find answers to the most common questions
-            about StreamVibe.
+            ABIM STUDIO is a dynamic and innovative architectural and design firm, specializing in Building Information
+            Modeling (BIM), architectural planning, interior design, and landscape services. ABIM STUDIO is committed to
+            delivering exceptional design solutions that combine creativity, functionality, and sustainability.
         </p>
-        <button class="ask-question-btn">Ask a Question</button>
-    </div>
-    <div class="faq-container">
-        <div class="faq-item">
-            <button class="faq-question">
-                <span class="faq-number">01</span> What is BIM? <span class="icon">+</span>
-            </button>
-            <div class="faq-answer">
+        <div class="cards-container">
+            <div class="card">
+                <div class="icon">
+                    <img src="mission-icon.png" alt="Mission Icon">
+                </div>
+                <h2>Our Mission</h2>
                 <p>
-                    BIM stands for Building Information Modeling. It’s a digital representation of the physical and
-                    functional aspects of a building.
+                    Build the best product that creates the most value for our customers, use business to inspire and
+                    implement
+                    environmentally friendly solutions.
+                </p>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <img src="values-icon.png" alt="Values Icon">
+                </div>
+                <h2>Our Values</h2>
+                <p>
+                    We strive to go above and beyond for our clients no matter the challenge. We aim to deliver our very
+                    best
+                    work every single day across our services.
                 </p>
             </div>
         </div>
-        <div class="faq-item">
-            <button class="faq-question">
-                <span class="faq-number">02</span> Why use BIM? <span class="icon">+</span>
-            </button>
-            <div class="faq-answer">
-                <p>BIM improves collaboration, reduces costs, and ensures efficiency.</p>
-            </div>
-        </div>
-        <div class="faq-item">
-            <button class="faq-question">
-                <span class="faq-number">03</span> How does BIM improve collaboration? <span class="icon">+</span>
-            </button>
-            <div class="faq-answer">
-                <p>BIM enables seamless communication and shared data among all stakeholders.</p>
-            </div>
-        </div>
-        <div class="faq-item">
-            <button class="faq-question">
-                <span class="faq-number">04</span> Can BIM work with existing designs? <span class="icon">+</span>
-            </button>
-            <div class="faq-answer">
-                <p>Yes, BIM integrates well with traditional CAD systems and designs.</p>
-            </div>
-        </div>
-        <div class="faq-item">
-            <button class="faq-question">
-                <span class="faq-number">05</span> Is BIM cost-effective? <span class="icon">+</span>
-            </button>
-            <div class="faq-answer">
-                <p>Using BIM reduces project costs by minimizing errors and rework.</p>
-            </div>
-        </div>
-        <div class="faq-item">
-            <button class="faq-question">
-                <span class="faq-number">06</span> Does BIM help in project management? <span class="icon">+</span>
-            </button>
-            <div class="faq-answer">
-                <p>BIM provides tools for effective project tracking and resource management.</p>
-            </div>
-        </div>
-        <div class="faq-item">
-            <button class="faq-question">
-                <span class="faq-number">07</span> Does BIM improve visualization? <span class="icon">+</span>
-            </button>
-            <div class="faq-answer">
-                <p>BIM creates detailed 3D visualizations to assist in planning and execution.</p>
-            </div>
-        </div>
-        <div class="faq-item">
-            <button class="faq-question">
-                <span class="faq-number">08</span> What industries benefit from BIM? <span class="icon">+</span>
-            </button>
-            <div class="faq-answer">
-                <p>BIM is widely used in architecture, construction, and engineering industries.</p>
-            </div>
-        </div>
-    </div>
-    <div class="faq-footer">
-        <p>Questions</p>
-        <p>Whether you’re curious about features, a free trial, or even press, we’re here to answer any questions.</p>
-        <button class="contact-btn">Let's Talk Now!</button>
-    </div>
-
-</section>
+    </section>
 
 
-<section class="footer">
-    </footer>
-    <div class="footer-content">
-        <div class="social-media">
-            <p>Connect With Us</p>
-            <div class="social-icons">
-                <a href="#" aria-label="Facebook">
-                    <i class="fab fa-facebook"></i>
-                </a>
-                <a href="#" aria-label="Twitter">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="#" aria-label="LinkedIn">
-                    <i class="fab fa-linkedin"></i>
-                </a>
+    <section class="faq-section">
+        <div class="faq-header">
+            <h2>Frequently Asked Questions</h2>
+            <p>
+                Got questions? We’ve got answers! Check out our FAQ section to find answers to the most common questions
+                about StreamVibe.
+            </p>
+            <button class="ask-question-btn">Ask a Question</button>
+        </div>
+        <div class="faq-container">
+            <div class="faq-item">
+                <button class="faq-question">
+                    <span class="faq-number">01</span> What is BIM? <span class="icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>
+                        BIM stands for Building Information Modeling. It’s a digital representation of the physical and
+                        functional aspects of a building.
+                    </p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">
+                    <span class="faq-number">02</span> Why use BIM? <span class="icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>BIM improves collaboration, reduces costs, and ensures efficiency.</p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">
+                    <span class="faq-number">03</span> How does BIM improve collaboration? <span class="icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>BIM enables seamless communication and shared data among all stakeholders.</p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">
+                    <span class="faq-number">04</span> Can BIM work with existing designs? <span class="icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>Yes, BIM integrates well with traditional CAD systems and designs.</p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">
+                    <span class="faq-number">05</span> Is BIM cost-effective? <span class="icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>Using BIM reduces project costs by minimizing errors and rework.</p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">
+                    <span class="faq-number">06</span> Does BIM help in project management? <span class="icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>BIM provides tools for effective project tracking and resource management.</p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">
+                    <span class="faq-number">07</span> Does BIM improve visualization? <span class="icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>BIM creates detailed 3D visualizations to assist in planning and execution.</p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">
+                    <span class="faq-number">08</span> What industries benefit from BIM? <span class="icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>BIM is widely used in architecture, construction, and engineering industries.</p>
+                </div>
             </div>
         </div>
-        <div class="footer-bottom">
-            <p>©2024 abimstudio, All Rights Reserved</p>
-            <div class="footer-links">
-                <a href="#">Terms of Use</a>
-                <a href="#">Privacy Policy</a>
-                <a href="#">Cookie Policy</a>
+        <div class="faq-footer">
+            <p>Questions</p>
+            <p>Whether you’re curious about features, a free trial, or even press, we’re here to answer any questions.
+            </p>
+            <button class="contact-btn">Let's Talk Now!</button>
+        </div>
+
+    </section>
+
+
+
+    <section class="footer">
+        <div class="footer-content">
+            <div class="social-media">
+                <p>Connect With Us</p>
+                <div class="social-icons">
+                    <a href="#" aria-label="Facebook">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="#" aria-label="Twitter">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#" aria-label="LinkedIn">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>©2024 abimstudio, All Rights Reserved</p>
+                <div class="footer-links">
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Cookie Policy</a>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+
+</body>
+
+
 
 
 
