review and common changes

--- a/index.html
+++ b/index.html
@@ -195,7 +195,6 @@
         </section>
 
         <section class="review">
-<<<<<<< Updated upstream
                 <div class="review_div1">
                     <div class="review_div1_inner">
                         <div class="cmn_div1">
@@ -220,6 +219,9 @@
                             with a collaborative approach, enhancing coordination and optimizing execution for superior project 
                             outcomes.</p>
                         </div>
+                        <div class="cmn_div1">
+                            <button class="cmn_btn">Build The Future Today ></button>
+                        </div>
                     </div>
                     <div class="review_div1_inner">
                         <img src="./static/images/review3.png" alt="" class="bg_img">
@@ -242,11 +244,6 @@
                         <img src="./static/images/review_right_btn.png" alt="" class="bg_img">
                     </button>
                 </div>
-=======
-            <div class="review_div1">
-                review
-            </div>
->>>>>>> Stashed changes
         </section>
 
         <section class="contact">
