--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                 <div class="future_stk_0">
                     <img src="./static/images/future0.png" alt="" class="bg_img">
                 </div>
-                <div class="future_stk_btn">
+                <!-- <div class="future_stk_btn">
                     <button><img src="./static/images/futureButton.png" alt="" class="bg_img"></button>
-                </div>
+                </div> -->
             </div>
         </section>
 
@@ -248,7 +248,6 @@
 
         <section class="contact">
             <div class="contact_div1">
-                contact
             </div>
         </section>
 
