--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 </div>
                 <div class="nav_menu">
                     <div><a href="" class="nav_ele">Home</a></div>
-                    <div><a href="" class="nav_ele">About</a></div>
-                    <div><a href="" class="nav_ele">Services</a></div>
+                    <div><a href="./aboutUs.html" class="nav_ele">About</a></div>
+                    <div><a href="./services.html" class="nav_ele">Services</a></div>
                     <div><a href="" class="nav_ele">Contact</a></div>
                     <div><button>Request a demo</button></div>
                 </div>
@@ -248,12 +248,71 @@
 
         <section class="contact">
             <div class="contact_div1">
+                <div class="contact_div1_upr">
+                    <div><p class="heading_white">Lets Stay In Touch</p></div>
+                    <div><p class="text_content_white">Send us a message and We will get back to you as soon as we can</p></div>
+                </div>
+                <div class="contact_div1_lwr">
+                    <form action="">
+                    <div>
+                        <div class="contact_inp">
+                            <input type="text" class="cmn_inp" name="name" id="" placeholder="name">
+                        </div>
+                        <div class="contact_inp">
+                            <input type="email" class="cmn_inp" name="email" id="" placeholder="email">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="contact_inp">
+                            <input type="number" class="cmn_inp" name="ph_no" id="" placeholder="number">
+                        </div>
+                        <div class="contact_inp">
+                            <input type="text" class="cmn_inp" name="country" id="" placeholder="country"> 
+                        </div>
+                    </div>
+                    <div>
+                        <div class="contact_inp">
+                            <input type="text" class="cmn_inp" name="state" id="" placeholder="state">
+                        </div>
+                        <div class="contact_inp">
+                            <input type="text" class="cmn_inp" name="company" id="" placeholder="company">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="contact_inp">
+                            <textarea name="message" class="cmn_txtarea" id="" cols="30" rows="10" placeholder="message"></textarea>
+                        </div>
+                        <input type="submit" class="cmn_btn" value="send">
+                    </div>
+                </form>
+                    <div>
+                        <p class="text_content_white"> This site is protected by reCaptcha and Google Privacy Policy and 
+                            Terms of Service Apply</p>
+                    </div>
+                </div>
             </div>
         </section>
 
-        <footer id="ftr">
+        <footer class="footer">
             <div class="footer_div1">
-                footer
+                <div>
+                    <img src="./static/images/logo.png" alt="" class="card_img">
+                </div>
+                <div>
+                    <p class="text_content_white">
+                        We are pioneers in crafting enviornments <br>
+                        guys I dont think this part is given by <br>
+                        the client
+                    </p>
+                </div>
+                <div>
+                    <button class="cmn_btn"><img src="./static/images/fakebookIcon.png" alt="" classs="card_img"></button>
+                    <button class="cmn_btn"><img src="./static/images/twatterIcon.png" alt="" classs="card_img"></button>
+                    <button class="cmn_btn"><img src="./static/images/instagramIcon.png" alt="" classs="card_img"></button>
+                </div>
+            </div>
+            <div class="footer_div2">
+                <p class="text_content_white"> Copyright © ABIM Studio, all rights reserved.</p>
             </div>
         </footer>
     </main>
