added contactus and minor fixes

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="abtstyle.css">
     <script src="https://kit.fontawesome.com/684a857e9e.js" crossorigin="anonymous"></script>
     <script defer src="aboutusscript.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
 
-    <header class="navbar">
+    <!-- <header class="navbar">
         <div class="logo">
-            <img src="./static/images/logo.png" alt="abimstudio logo">
+            <img src="./static/images/logo.png" alt="abimstudio logo"> -->
             <!-- <span>abim<span style="color: red;">studio</span> -->
-        </div>
+        <!-- </div>
         <nav class="nav-links">
             <a href="./index.html">Home</a>
             <a href="#" class="active">About Us</a>
@@ -31,9 +32,36 @@
                 <i class="fas fa-bell"></i>
             </a>
         </div>
-    </header>
-
-
+    </header> -->
+    <nav id="nav">
+        <div class="nav_div1">
+            <img src="./static/images/logo.png" alt="logo" class="bg_img">
+        </div>
+        <div class="nav_div2">
+            <a href="./index.html" class="nav_ele">Home</a>
+            <a href="./aboutUs.html" class="nav_ele">About</a>
+            <a href="./services.html" class="nav_ele">Services</a>
+            <div><a href="./contactUs.html" class="nav_ele">Contact</a></div>
+            <button>Request a demo</button>
+        </div>
+        <div class="nav_div3">
+            <div class="nav_logo">
+                <img src="./static/images/logo_mini.png" alt="" class="bg_img">
+            </div>
+            <div class="nav_btn">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="nav_menu">
+                <div><a href="./index.html" class="nav_ele">Home</a></div>
+                <div><a href="./aboutUs.html" class="nav_ele">About</a></div>
+                <div><a href="./services.html" class="nav_ele">Services</a></div>
+                <div><a href="./contactUs.html" class="nav_ele">Contact</a></div>
+                <div><button>Request a demo</button></div>
+            </div>
+        </div>
+    </nav>
 
     <!-- Fullscreen Image Section -->
     <section class="fullscreen-image">
