--- a/services.html
+++ b/services.html
@@ -7,17 +7,18 @@
     <link rel="stylesheet" href="servstyle.css">
     <script src="https://kit.fontawesome.com/684a857e9e.js" crossorigin="anonymous"></script>
     <!-- <script defer src="aboutusscript.js"></script> -->
+    <link rel="stylesheet" href="style.css">
     <title>Services Page</title>
 </head>
 
 
 <body>
 
-    <header class="navbar">
+    <!-- <header class="navbar">
         <div class="logo">
-            <img src="./static/images/logo.png" alt="abimstudio logo">
+            <img src="./static/images/logo.png" alt="abimstudio logo"> -->
             <!-- <span>abim<span style="color: red;">studio</span> -->
-        </div>
+        <!-- </div>
         <nav class="nav-links">
             <a href="./index.html">Home</a>
             <a href="./aboutUs.html">About Us</a>
@@ -32,8 +33,37 @@
                 <i class="fas fa-bell"></i>
             </a>
         </div>
-    </header>
+    </header> -->
 
+    <nav id="nav">
+        <div class="nav_div1">
+            <img src="./static/images/logo.png" alt="logo" class="bg_img">
+        </div>
+        <div class="nav_div2">
+            <a href="./index.html" class="nav_ele">Home</a>
+            <a href="./aboutUs.html" class="nav_ele">About</a>
+            <a href="./services.html" class="nav_ele">Services</a>
+            <div><a href="./contactUs.html" class="nav_ele">Contact</a></div>
+            <button>Request a demo</button>
+        </div>
+        <div class="nav_div3">
+            <div class="nav_logo">
+                <img src="./static/images/logo_mini.png" alt="" class="bg_img">
+            </div>
+            <div class="nav_btn">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="nav_menu">
+                <div><a href="./index.html" class="nav_ele">Home</a></div>
+                <div><a href="./aboutUs.html" class="nav_ele">About</a></div>
+                <div><a href="./services.html" class="nav_ele">Services</a></div>
+                <div><a href="./contactUs.html" class="nav_ele">Contact</a></div>
+                <div><button>Request a demo</button></div>
+            </div>
+        </div>
+    </nav>
 
     <!-- Fullscreen Image Section -->
     <section class="fullscreen-image">
@@ -73,14 +103,14 @@
                 </p>
                 <a href="#" class="link">View Projects <i class="fa-solid fa-square-arrow-up-right"></i></a>
             </div>
-            <div class="arrow-buttons">
+            <!-- <div class="arrow-buttons">
                 <button class="arrow-button left">
                     <span>&larr;</span>
                 </button>
                 <button class="arrow-button right">
                     <span>&rarr;</span>
                 </button>
-            </div>
+            </div> -->
             <div class="image">
                 <img src="./static/images/3dmodelling.png" alt="3D Modeling">
             </div>
