--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/684a857e9e.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
@@ -253,7 +254,7 @@
                     <div><p class="text_content_white">Send us a message and We will get back to you as soon as we can</p></div>
                 </div>
                 <div class="contact_div1_lwr">
-                    <form action="">
+                    <form action="" method="post">
                     <div>
                         <div class="contact_inp">
                             <input type="text" class="cmn_inp" name="name" id="" placeholder="name">
@@ -292,29 +293,33 @@
                 </div>
             </div>
         </section>
-
-        <footer class="footer">
-            <div class="footer_div1">
-                <div>
-                    <img src="./static/images/logo.png" alt="" class="card_img">
+        
+        <section class="footer">
+            <div class="footer-content">
+                <div class="social-media">
+                    <p>Connect With Us</p>
+                    <div class="social-icons">
+                        <a href="#" aria-label="Facebook">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="#" aria-label="Twitter">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="#" aria-label="LinkedIn">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </div>
                 </div>
-                <div>
-                    <p class="text_content_white">
-                        We are pioneers in crafting enviornments <br>
-                        guys I dont think this part is given by <br>
-                        the client
-                    </p>
-                </div>
-                <div>
-                    <button class="cmn_btn"><img src="./static/images/fakebookIcon.png" alt="" classs="card_img"></button>
-                    <button class="cmn_btn"><img src="./static/images/twatterIcon.png" alt="" classs="card_img"></button>
-                    <button class="cmn_btn"><img src="./static/images/instagramIcon.png" alt="" classs="card_img"></button>
+                <div class="footer-bottom">
+                    <p>©2024 abimstudio, All Rights Reserved</p>
+                    <div class="footer-links">
+                        <a href="#">Terms of Use</a>
+                        <a href="#">Privacy Policy</a>
+                        <a href="#">Cookie Policy</a>
+                    </div>
                 </div>
             </div>
-            <div class="footer_div2">
-                <p class="text_content_white"> Copyright © ABIM Studio, all rights reserved.</p>
-            </div>
-        </footer>
+        </section>
     </main>
 </body>
 
