--- a/contactUs.html
+++ b/contactUs.html
@@ -14,7 +14,7 @@
             <img src="./static/images/logo.png" alt="logo" class="bg_img">
         </div>
         <div class="nav_div2">
-            <a href="" class="nav_ele">Home</a>
+            <a href="./index.html" class="nav_ele">Home</a>
             <a href="./aboutUs.html" class="nav_ele">About</a>
             <a href="./services.html" class="nav_ele">Services</a>
             <div><a href="./contactUs.html" class="nav_ele">Contact</a></div>
@@ -30,7 +30,7 @@
                 <div></div>
             </div>
             <div class="nav_menu">
-                <div><a href="" class="nav_ele">Home</a></div>
+                <div><a href="./index.html" class="nav_ele">Home</a></div>
                 <div><a href="./aboutUs.html" class="nav_ele">About</a></div>
                 <div><a href="./services.html" class="nav_ele">Services</a></div>
                 <div><a href="./contactUs.html" class="nav_ele">Contact</a></div>
