--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="" class="nav_ele">Home</a>
                 <a href="./aboutUs.html" class="nav_ele">About</a>
                 <a href="./services.html" class="nav_ele">Services</a>
-                <a href="" class="nav_ele">Contact</a>
+                <a href="./contactUs.html" class="nav_ele">Contact</a>
                 <button>Request a demo</button>
             </div>
             <div class="nav_div3">
@@ -36,7 +36,7 @@
                     <div><a href="" class="nav_ele">Home</a></div>
                     <div><a href="./aboutUs.html" class="nav_ele">About</a></div>
                     <div><a href="./services.html" class="nav_ele">Services</a></div>
-                    <div><a href="" class="nav_ele">Contact</a></div>
+                    <div><a href="./contactUs.html" class="nav_ele">Contact</a></div>
                     <div><button>Request a demo</button></div>
                 </div>
             </div>
@@ -293,7 +293,7 @@
                 </div>
             </div>
         </section>
-        
+
         <section class="footer">
             <div class="footer-content">
                 <div class="social-media">
